--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=q, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='./dist/index.732c394e.css'>
+    <link rel='stylesheet' href='../dist/index.732c394e.css'>
     <title></title> 🤑 Finance — Get the latest info for your financial desicions</title>
 </head>
 <body>
